--- a/src/Forms/editarJugadores.form
+++ b/src/Forms/editarJugadores.form
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Forms.editarJugadores">
-  <grid id="27dc6" binding="Pane" layout-manager="GridLayoutManager" row-count="27" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="Pane" layout-manager="GridLayoutManager" row-count="24" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="940"/>
+      <xy x="20" y="20" width="500" height="896"/>
     </constraints>
     <properties>
       <background color="-14473879"/>
+      <font size="18"/>
     </properties>
     <border type="none"/>
     <children>
@@ -23,7 +24,7 @@
       </component>
       <vspacer id="aeb70">
         <constraints>
-          <grid row="26" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+          <grid row="23" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
             <preferred-size width="252" height="14"/>
           </grid>
         </constraints>
@@ -35,39 +36,9 @@
           </grid>
         </constraints>
       </vspacer>
-      <component id="20b4" class="javax.swing.JLabel" binding="cit">
-        <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <foreground color="-1"/>
-          <text value="Cédula:"/>
-        </properties>
-      </component>
-      <component id="66301" class="javax.swing.JTextField" binding="ci">
-        <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="252" height="34"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
-      <component id="38e" class="javax.swing.JButton" binding="buscarBtn">
-        <constraints>
-          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="252" height="34"/>
-          </grid>
-        </constraints>
-        <properties>
-          <background color="-9064132"/>
-          <focusable value="false"/>
-          <foreground color="-1"/>
-          <text value="Buscar"/>
-        </properties>
-      </component>
       <component id="9a78b" class="javax.swing.JButton" binding="nomBtn">
         <constraints>
-          <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="252" height="34"/>
           </grid>
         </constraints>
@@ -80,7 +51,7 @@
       </component>
       <component id="635fe" class="javax.swing.JButton" binding="apeBtn">
         <constraints>
-          <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="252" height="34"/>
           </grid>
         </constraints>
@@ -93,7 +64,7 @@
       </component>
       <component id="e346b" class="javax.swing.JButton" binding="corBtn">
         <constraints>
-          <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="252" height="34"/>
           </grid>
         </constraints>
@@ -106,7 +77,7 @@
       </component>
       <component id="36023" class="javax.swing.JButton" binding="fecBtn">
         <constraints>
-          <grid row="9" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="252" height="34"/>
           </grid>
         </constraints>
@@ -119,7 +90,7 @@
       </component>
       <component id="1a24c" class="javax.swing.JButton" binding="telBtn">
         <constraints>
-          <grid row="10" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="252" height="34"/>
           </grid>
         </constraints>
@@ -132,7 +103,7 @@
       </component>
       <component id="bb3bb" class="javax.swing.JButton" binding="conBtn">
         <constraints>
-          <grid row="11" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="252" height="34"/>
           </grid>
         </constraints>
@@ -145,7 +116,7 @@
       </component>
       <component id="9e46f" class="javax.swing.JTextField" binding="nom">
         <constraints>
-          <grid row="13" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="10" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="252" height="34"/>
           </grid>
         </constraints>
@@ -153,7 +124,7 @@
       </component>
       <component id="eb6c1" class="javax.swing.JTextField" binding="ape">
         <constraints>
-          <grid row="14" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="11" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="252" height="34"/>
           </grid>
         </constraints>
@@ -161,7 +132,7 @@
       </component>
       <component id="a0d8c" class="javax.swing.JTextField" binding="cor">
         <constraints>
-          <grid row="15" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="12" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="252" height="34"/>
           </grid>
         </constraints>
@@ -169,7 +140,7 @@
       </component>
       <component id="da407" class="javax.swing.JTextField" binding="tel">
         <constraints>
-          <grid row="17" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="14" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="252" height="34"/>
           </grid>
         </constraints>
@@ -177,7 +148,7 @@
       </component>
       <component id="1e1b" class="javax.swing.JPasswordField" binding="cont">
         <constraints>
-          <grid row="18" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="15" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="252" height="34"/>
           </grid>
         </constraints>
@@ -185,7 +156,7 @@
       </component>
       <component id="3018f" class="javax.swing.JPasswordField" binding="con">
         <constraints>
-          <grid row="19" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="16" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="252" height="34"/>
           </grid>
         </constraints>
@@ -193,7 +164,7 @@
       </component>
       <component id="5dfdb" class="javax.swing.JButton" binding="verBtn">
         <constraints>
-          <grid row="22" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="19" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="252" height="34"/>
           </grid>
         </constraints>
@@ -206,7 +177,7 @@
       </component>
       <component id="65a2d" class="javax.swing.JButton" binding="regrBtn">
         <constraints>
-          <grid row="25" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="22" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="252" height="34"/>
           </grid>
         </constraints>
@@ -219,7 +190,7 @@
       </component>
       <component id="ef04b" class="javax.swing.JButton" binding="elegBtn">
         <constraints>
-          <grid row="24" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="21" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="252" height="34"/>
           </grid>
         </constraints>
@@ -232,7 +203,7 @@
       </component>
       <component id="5a415" class="javax.swing.JButton" binding="actuBtn">
         <constraints>
-          <grid row="23" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="20" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="252" height="34"/>
           </grid>
         </constraints>
@@ -243,18 +214,9 @@
           <text value="Actualizar"/>
         </properties>
       </component>
-      <component id="d63b" class="javax.swing.JLabel" binding="ver1">
-        <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <foreground color="-1"/>
-          <text value=""/>
-        </properties>
-      </component>
       <component id="dcef2" class="javax.swing.JLabel" binding="txt">
         <constraints>
-          <grid row="12" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="9" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <foreground color="-1"/>
@@ -263,7 +225,7 @@
       </component>
       <component id="aee66" class="javax.swing.JLabel" binding="ver2">
         <constraints>
-          <grid row="21" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="18" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <foreground color="-1"/>
@@ -272,28 +234,37 @@
       </component>
       <component id="3aa26" class="com.toedter.calendar.JDateChooser" binding="fec" custom-create="true">
         <constraints>
-          <grid row="16" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="13" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="252" height="10"/>
           </grid>
         </constraints>
       </component>
-      <hspacer id="25f30">
+      <component id="a673e" class="javax.swing.JPasswordField" binding="confcla">
         <constraints>
-          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="17" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="252" height="34"/>
+          </grid>
         </constraints>
-      </hspacer>
+        <properties/>
+      </component>
       <hspacer id="eeef4">
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <component id="a673e" class="javax.swing.JPasswordField" binding="confcla">
+      <hspacer id="25f30">
         <constraints>
-          <grid row="20" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="252" height="34"/>
-          </grid>
+          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+      </hspacer>
+      <component id="1ab7a" class="javax.swing.JLabel" binding="ver">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <foreground color="-1"/>
+          <text value=""/>
+        </properties>
       </component>
     </children>
   </grid>
