--- a/src/Forms/buscarc.form
+++ b/src/Forms/buscarc.form
@@ -7,6 +7,7 @@
     </constraints>
     <properties>
       <background color="-14569289"/>
+      <foreground color="-1"/>
     </properties>
     <border type="none"/>
     <children>
@@ -15,6 +16,8 @@
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-9064132"/>
+          <foreground color="-1"/>
           <text value="Ver Reservas"/>
         </properties>
       </component>
@@ -35,9 +38,10 @@
       </component>
       <component id="d71ea" class="javax.swing.JButton" binding="regBtn">
         <constraints>
-          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-1744027"/>
           <text value="Regresar"/>
         </properties>
       </component>
