--- a/src/Forms/editarReservas.form
+++ b/src/Forms/editarReservas.form
@@ -1,13 +1,157 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Forms.editarReservas">
-  <grid id="27dc6" row-count="1" column-count="1" layout-manager="GridLayoutManager">
+  <grid id="27dc6" binding="pane" layout-manager="GridLayoutManager" row-count="14" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
-      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+      <xy x="20" y="20" width="500" height="576"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-9075457"/>
+    </properties>
     <border type="none"/>
-    <children/>
+    <children>
+      <vspacer id="1e6a0">
+        <constraints>
+          <grid row="13" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </vspacer>
+      <component id="95ae" class="javax.swing.JButton" binding="fecBtn">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-9064132"/>
+          <foreground color="-1"/>
+          <text value="Fecha de reserva"/>
+        </properties>
+      </component>
+      <component id="33b73" class="javax.swing.JButton" binding="horJBtn">
+        <constraints>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-9064132"/>
+          <foreground color="-1"/>
+          <text value="Horario"/>
+        </properties>
+      </component>
+      <component id="4b4cb" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="Bernard MT Condensed" size="26"/>
+          <foreground color="-1"/>
+          <text value="Editar Reserva"/>
+        </properties>
+      </component>
+      <component id="fba6b" class="javax.swing.JLabel" binding="ver">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font size="18"/>
+          <foreground color="-1"/>
+          <text value=""/>
+        </properties>
+      </component>
+      <component id="64c80" class="javax.swing.JLabel" binding="fecTxt">
+        <constraints>
+          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <foreground color="-1"/>
+          <text value="Fecha de reserva:"/>
+        </properties>
+      </component>
+      <component id="6d69c" class="javax.swing.JLabel" binding="horTxt">
+        <constraints>
+          <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <foreground color="-1"/>
+          <text value="Horario:"/>
+        </properties>
+      </component>
+      <component id="af1dc" class="javax.swing.JComboBox" binding="hor">
+        <constraints>
+          <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties>
+          <model>
+            <item value="-- Seleccione un horario --"/>
+            <item value="14:00 - 15:00"/>
+            <item value="15:00 - 16:00"/>
+            <item value="16:00 - 17:00"/>
+            <item value="17:00 - 18:00"/>
+            <item value="18:00 - 19:00"/>
+            <item value="19:00 - 20:00"/>
+            <item value="20:00 - 21:00"/>
+            <item value="21:00 - 22:00"/>
+          </model>
+        </properties>
+      </component>
+      <component id="863dd" class="com.toedter.calendar.JDateChooser" binding="fecha" custom-create="true">
+        <constraints>
+          <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </component>
+      <component id="b7285" class="javax.swing.JButton" binding="actBtn">
+        <constraints>
+          <grid row="10" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-9064132"/>
+          <foreground color="-1"/>
+          <text value="Actualizar"/>
+        </properties>
+      </component>
+      <component id="8d6b0" class="javax.swing.JButton" binding="elegBtn">
+        <constraints>
+          <grid row="11" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-9064132"/>
+          <foreground color="-1"/>
+          <text value="Elegir de nuevo"/>
+        </properties>
+      </component>
+      <component id="e195d" class="javax.swing.JButton" binding="regBtn">
+        <constraints>
+          <grid row="12" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-1744027"/>
+          <foreground color="-1"/>
+          <text value="Regresar"/>
+        </properties>
+      </component>
+      <hspacer id="c9b61">
+        <constraints>
+          <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
+      <hspacer id="fdf0b">
+        <constraints>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
+      <vspacer id="2b1d2">
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </vspacer>
+      <component id="b4ee6" class="javax.swing.JLabel" binding="ver2">
+        <constraints>
+          <grid row="9" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <foreground color="-1769469"/>
+          <text value=""/>
+        </properties>
+      </component>
+    </children>
   </grid>
 </form>
