--- a/src/Forms/adingrCan.form
+++ b/src/Forms/adingrCan.form
@@ -7,6 +7,7 @@
     </constraints>
     <properties>
       <background color="-11883306"/>
+      <focusable value="false"/>
       <toolTipText value="-- Numero total de Jugadores --"/>
     </properties>
     <border type="none"/>
@@ -171,6 +172,8 @@
           <grid row="11" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-16569490"/>
+          <foreground color="-1"/>
           <text value="Elegir imagen"/>
         </properties>
       </component>
